--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "fs-extra": "^10.0.0",
-        "md5-file": "^5.0.0"
+        "md5-file": "^5.0.0",
+        "tinro": "^0.6.12"
     }
 }
